log_filter 7.x-1.x, 2013-03-28
------------------------------
* Saving filters works.
* Implemented standards compliant url GET parameter (filter name) regime.

log_filter 7.x-1.x, 2013-03-28
------------------------------
* Working on saving (creating/updating) filter.

log_filter 7.x-1.x, 2013-03-26
------------------------------
* Now uses singular development branch.
* Implemented use of Judy.

log_filter 7.x-1.0.x, 2013-03-26
--------------------------------
* Removed Inspect module dependency.

log_filter 7.x-1.0.x, 2013-02-09
--------------------------------
* Frontend now strips tags off text fields.

log_filter 7.x-1.0.x, 2013-02-05
--------------------------------
* Finished message box; .showAll() working, and fully documented.

log_filter 7.x-1.0.x, 2013-02-03
--------------------------------
* Frontend now uses inspect.errorHandler().
* Implemented message box.

log_filter 7.x-1.0.x, 2013-02-02
--------------------------------
* Filter styling done.
* Implemented time fields.

log_filter 7.x-1.0.x, 2013-01-28
--------------------------------
* em-styling to get rid of nauseously complex javascript resizing.

log_filter 7.x-1.0.x, 2013-01-27
--------------------------------
* Filter selector is no longer read-only during create/edit; user is allowed to change filter even in these modes (previous behaviour was too restrictive, instead let the user makes his mistakes and learn).
* Changing filter to default no longer fires a page refresh.
* Implemented 2 update list buttons.
* Lots of visual tweaking.

log_filter 7.x-1.0.x, 2013-01-27
--------------------------------
* Delete logs: don't prompt user for confirmation again if there's a limit, if already prompted for confirmation whilst there was no limit.
* Create filter: names 'default' and 'adhoc' are illegal.
* Worked on setting filter name as url parameter.

log_filter 7.x-1.0.x, 2013-01-13
--------------------------------
* Added role condition.
* Put validation on more condition fields.