@@ -1,3 +1,7 @@
+log_filter 7.x-1.x, 2013-04-01
+------------------------------
+* _listFilters().
+
 log_filter 7.x-1.x, 2013-03-28
 ------------------------------
 * Saving filters works.
